src/test/deca/syntax/invalid/className-this.synt
className-this.deca:1:
